feat: fix index.html in rsschool-cv-html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <header class="header">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#contacts" class="nav-link">CONTACTS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#skills" class="nav-link">SKILLS</a>
+				    </li>
+                    <li class="nav-item">
+                        <a href="#education" class="nav-link">EDUCATION</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#languages" class="nav-link">LANGUAGES</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main-container">
+            <div class="left-side">
+                <figure class="photo">
+                    <img src="foto.png" alt="my photo" class="photo" />
+                </figure>
+                <section class="section" id="contacts">
+                    <h2 class="section-title">contacts</h2>
+                    <ul class="contact__list">
+                        <li class="contact__item"> Tel. +375339037583 (A1)
+                        </li>
+                        <li class="contact__item"> E-mail: vladimir.kunats@gmail.com
+                        </li>
+                        <li class="contact__item"> Skype: Vladimir Kunats
+                        </li>
+						<li class="contact__item"> Github: KunatsVladimir
+                        </li>
+                    </ul>
+                </section>
+                <section class="section" id="EDUCATION">
+                    <h2 class="section-title">EDUCATION</h2>
+                    <p>Brest State Technical University</p>
+                </section>
+                <section class="section" id="LANGUAGES">
+                    <h2 class="section-title">LANGUAGES</h2>
+                    <div class="languages_list">
+                        English - A1
+                    </div>
+                </section>
+            </div>
+            <section class="section" id="SKILLS">
+                    <h2 class="section-title">SKILLS</h2>
+                    <ul class="my_skills">
+                        <li>JAVA(basic)</li>
+                        <li>MySQL(basic)</li>
+                    </ul>
+                </section>
+                <section class="section" id="projects">
+                    <h2 class="section-title">projects</h2>
+                    <ul class="projects__list">
+                        <li>
+                            <a href="https://KunatsVladimir.github.io/rsschool-cv/"> CV for RSSCHOOL</a> 
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </main>
+        <footer class="footer">
+            <a class="footer__rsschool" href="https://rs.school/js/" target="_blank">
+                <img src="https://rs.school/images/rs_school_js.svg" alt="RS School" class="img_rs_school"/>
+            </a>
+            <p class="footer__year">2022
+            <a class="my_github" href="https://github.com/KunatsVladimir" target="_blank" >My GitHub</a></p>
+        </footer>
+    </div>
+</body>
+</html>
